--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/node": "20.4.2",
     "@types/react": "18.2.37",
     "@types/react-dom": "18.2.15",
+    "@types/sanitize-html": "^2.16.0",
     "autoprefixer": "10.4.14",
     "class-variance-authority": "^0.6.1",
     "clsx": "^1.2.1",
@@ -28,6 +29,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-intersection-observer": "^9.5.2",
+    "sanitize-html": "^2.17.0",
     "tailwind-merge": "^1.13.2",
     "tailwindcss": "3.3.2",
     "tailwindcss-animate": "^1.0.6",
